added a comment to show what the link src code does

--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
 
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/main.css">
+
+	/*~~~~~~~~~~ Added this line to show our icon on localhost~~~~~~~~~~~~~*/
 	<link rel="icon" href="favicon.ico" type="image/x-icon" />
-	
+
 </head>
 
 <body>
