corrected the comments

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/main.css">
 
-	/*~~~~~~~~~~ Added this line to show our icon on localhost~~~~~~~~~~~~~*/
+	<!--~~~~~~~~~~ Added this line to show our icon on localhost~~~~~~~~~~~~~-->
 	<link rel="icon" href="favicon.ico" type="image/x-icon" />
 
 </head>
